# MarchMadness

./: .gitignore  README.md  missing_teams.csv  missing_teams.json  pyproject.toml  testing.ipynb
DAG/: DAGCreator.py
assets_dbt_python/: setup.py
assets_dbt_python/assets_dbt_python/: __init__.py
assets_dbt_python/assets_dbt_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
assets_dbt_python/dbt_project/: example.duckdb
assets_dbt_python/tmp24vihgff/history/: runs.db
assets_dbt_python/tmp24vihgff/schedules/: schedules.db
assets_dbt_python/tmp9oc3tann/history/: runs.db
assets_dbt_python/tmp9oc3tann/schedules/: schedules.db
assets_dbt_python/tmpcizinazh/history/: runs.db
data/: ValidationSet.csv
data/Output/: ModelOutput.csv  predictions.csv
data/processed/: cleaned_data.csv  concatenated_data.csv
ncaa_mod/: bubbleClassification.py  cleaning.py  hankEDA.ipynb  main.py  missing_teams.csv  missing_teams.json  modelDataPrep.py  parameterTuning.py  scraping.py  sequenceModel.py  testing.ipynb
ncaa_mod/cleaned_csvs/: cleaned-cbb2013.csv  cleaned-cbb2014.csv  cleaned-cbb2015.csv  cleaned-cbb2016.csv  cleaned-cbb2017.csv  cleaned-cbb2018.csv  cleaned-cbb2019.csv  cleaned-cbb2020.csv  cleaned-cbb2021.csv  cleaned-cbb2022.csv  cleaned-cbb2023.csv  cleaned_combined.csv
projectDag/: EDA.ipynb  README.md  data.csv  pyproject.toml  setup.cfg  setup.py
projectDag/projectDag/: __init__.py  assets.py
projectDag/projectDag.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
projectDag/projectDag_tests/: test_assets.py
tests/: tests.py
(+256 files in other folders)
