[tool.poetry]
name = "ncaa-mod"
version = "0.1.0"
description = ""
authors = ["Isaac Anderson <isaac.anderson@radioninsurance.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
