[tool.poetry]
name = "ncaa-mod"
version = "0.1.0"
description = "A data pipeline for NCAA Basketball predictions"
authors = ["Isaac Anderson <isaachenryanderson@gmail.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
numpy = "^1.21.2"
scikit-learn = "^0.24.2"
scipy = "^1.7.1"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
dagster = "^0.12.9"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
